--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,10 @@
-dist: trusty
-sudo: false
-
 language: node_js
 node_js:
   - '12.16.1'
+sudo: true
 
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+    chrome: stable
 
 cache:
   directories:
