--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "@angular/animations": "~9.0.3",
     "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.3",
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
+    "@angular/compiler-cli": "~9.0.3",
     "@angular/core": "~9.0.3",
     "@angular/forms": "~9.0.3",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@sentry/browser": "^5.14.2",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
