--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@angular/compiler": "~9.0.3",
     "@angular/compiler-cli": "~9.0.3",
     "@angular/core": "~9.0.3",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.3",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
-    "@sentry/browser": "^5.14.2",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "firebase": "^7.14.3",
     "jquery": "^3.4.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
