--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/cli": "~9.0.4",
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
@@ -20,12 +21,14 @@
     "@angular/core": "~9.0.3",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.3",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "firebase": "^7.14.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
