--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - '12.16.1'
+branches:
+  only:
+    - master
 sudo: true
 
 addons:
@@ -10,8 +13,18 @@ cache:
   directories:
     - ./node_modules
 
+before_script:
+  - npm install -g @angular/cli
+
 install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng build --prod
+
+deploy:
+  skip_cleanup: true
+  provider: firebase
+  token:
+    secure: "1//0gnnnxKPhrue0CgYIARAAGBASNgF-L9IrC92zyGwPs9c43Zz3EhZiDbOpJafDSm28iOHnBwpVwYn3xd8-VjeSsektF4vXVJZCrg"
