--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,8 @@ script:
   - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - ng build --prod
 
-after_success:
-  - firebase deploy --token 1//0gKLzb2jlhENRCgYIARAAGBASNgF-L9IrjWg0akdPpf_d8lkwxj6S1pEqjTkQen0ndXqw1AfyVLXTFBS7qBoiXByDrOlDVYoA6Q
+deploy:
+  skip_cleanup: true
+  provider: firebase
+  token: 1//0gKLzb2jlhENRCgYIARAAGBASNgF-L9IrjWg0akdPpf_d8lkwxj6S1pEqjTkQen0ndXqw1AfyVLXTFBS7qBoiXByDrOlDVYoA6Q
+    secure: ""
