--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
 deploy:
   skip_cleanup: true
   provider: firebase
-  token: 1//0gKLzb2jlhENRCgYIARAAGBASNgF-L9IrjWg0akdPpf_d8lkwxj6S1pEqjTkQen0ndXqw1AfyVLXTFBS7qBoiXByDrOlDVYoA6Q
-    secure: ""
+  token: 
+    secure: "1//0gKLzb2jlhENRCgYIARAAGBASNgF-L9IrjWg0akdPpf_d8lkwxj6S1pEqjTkQen0ndXqw1AfyVLXTFBS7qBoiXByDrOlDVYoA6Q"
