--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
     - ./node_modules
 
 before_script:
+  - npm install -g firebase-tools
   - npm install -g @angular/cli
 
 install:
@@ -22,9 +23,6 @@ install:
 script:
   - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - ng build --prod
-
-deploy:
-  skip_cleanup: true
-  provider: firebase
-  token: 
-    secure: $FIREBASE_TOKEN
+  
+after_success:
+  - firebase deploy --token $FIREBASE_TOKEN
