--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,21 @@ addons:
 cache:
   directories:
     - ./node_modules
-
-before_script:
-  - npm install -g firebase-tools
-  - npm install -g @angular/cli
-
-install:
-  - npm install
-
-script:
-  - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-  - ng build --prod
-  
-after_success:
-  - firebase deploy --token $FIREBASE_TOKEN
+    
+jobs:
+  include:
+    - stage: test
+      script:
+       - npm install -g @angular/cli
+       - ng test --watch=false --no-progres -browsers=ChromeHeadlessNoSandbox
+       - ng build --prod
+    - stage: deploy
+      script:
+        - npm install -g firebase-tools
+        - firebase deploy --token $FIREBASE_TOKEN
+        
+ stages:
+  - name: test
+    if: type = pull_request
+  - name: deploy
+    if: type = push AND branch = master
