--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ cache:
   directories:
     - ./node_modules
 
+addons:
+  sonarcloud:
+    organization: kiran3232
+    token: $SONAR_TOKEN
+
 before_script:
   - npm install -g firebase-tools
   - npm install -g @angular/cli
@@ -21,8 +26,9 @@ install:
   - npm install
 
 script:
-  - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
   - ng build --prod
+  - sonar-scanner
   
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN
